Source/Falcon/gen/FalconParser.py
# Generated from /media/aaron/Shared2/School/BGSU-thesis/Source/Falcon/lang/Falcon.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FalconParser ( Parser ):

    grammarFileName = "Falcon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'~~'", "'Domain'", "'['", "']'", "'Test'", 
                     "'Assert'", "'Winnow'", "'Groupby'", "'Satisfy'", "'('", 
                     "')'", "'{'", "'}'", "','", "';'", "<INVALID>", "'|'", 
                     "'|>'", "'|!'", "'|%'", "':'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'='", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "TEST", "ASSERT", "WINNOW", "GROUPBY", 
                      "SATISFY", "LPAREN", "RPAREN", "LBRAC", "RBRAC", "COMMA", 
                      "SEMICOLON", "ASSIGN", "BAR", "ABAR", "EBAR", "MBAR", 
                      "COLON", "OP_LOGICAL", "OP_AND", "OP_OR", "OP_NOT", 
                      "DIRECTIVE", "FNARG", "ID", "OPERATORS", "OP_EQ", 
                      "OP_NE", "ARROW", "LABEL", "NUMBER", "STRING", "CODESMNT", 
                      "CODEBLOCK", "UMATH", "COMMENT", "MCOMMENT", "WS", 
                      "NL" ]

    RULE_block = 0
    RULE_namespace = 1
    RULE_stmt = 2
    RULE_assertion = 3
    RULE_test = 4
    RULE_macro = 5
    RULE_domain_names = 6
    RULE_test_stub = 7
    RULE_test_logical = 8
    RULE_winnow_test = 9
    RULE_groupby_test = 10
    RULE_satisfy_test = 11
    RULE_bin_stub = 12
    RULE_winnow_stub = 13
    RULE_domain = 14
    RULE_compiler = 15
    RULE_fn_arg = 16
    RULE_code = 17
    RULE_cblock = 18
    RULE_assign = 19
    RULE_arg_list = 20
    RULE_value_list = 21
    RULE_name = 22
    RULE_predicate = 23
    RULE_value = 24
    RULE_named_value = 25
    RULE_dictate = 26

    ruleNames =  [ "block", "namespace", "stmt", "assertion", "test", "macro", 
                   "domain_names", "test_stub", "test_logical", "winnow_test", 
                   "groupby_test", "satisfy_test", "bin_stub", "winnow_stub", 
                   "domain", "compiler", "fn_arg", "code", "cblock", "assign", 
                   "arg_list", "value_list", "name", "predicate", "value", 
                   "named_value", "dictate" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    TEST=5
    ASSERT=6
    WINNOW=7
    GROUPBY=8
    SATISFY=9
    LPAREN=10
    RPAREN=11
    LBRAC=12
    RBRAC=13
    COMMA=14
    SEMICOLON=15
    ASSIGN=16
    BAR=17
    ABAR=18
    EBAR=19
    MBAR=20
    COLON=21
    OP_LOGICAL=22
    OP_AND=23
    OP_OR=24
    OP_NOT=25
    DIRECTIVE=26
    FNARG=27
    ID=28
    OPERATORS=29
    OP_EQ=30
    OP_NE=31
    ARROW=32
    LABEL=33
    NUMBER=34
    STRING=35
    CODESMNT=36
    CODEBLOCK=37
    UMATH=38
    COMMENT=39
    MCOMMENT=40
    WS=41
    NL=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namespace(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.NamespaceContext)
            else:
                return self.getTypedRuleContext(FalconParser.NamespaceContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.StmtContext)
            else:
                return self.getTypedRuleContext(FalconParser.StmtContext,i)


        def getRuleIndex(self):
            return FalconParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = FalconParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 54
                    self.namespace()
                    self.state = 57 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FalconParser.ID) | (1 << FalconParser.LABEL) | (1 << FalconParser.CODESMNT))) != 0)):
                        break

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 59
                    self.stmt()
                    self.state = 62 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FalconParser.T__1) | (1 << FalconParser.TEST) | (1 << FalconParser.ASSERT) | (1 << FalconParser.WINNOW) | (1 << FalconParser.GROUPBY) | (1 << FalconParser.SATISFY) | (1 << FalconParser.DIRECTIVE) | (1 << FalconParser.ID) | (1 << FalconParser.LABEL) | (1 << FalconParser.CODESMNT) | (1 << FalconParser.CODEBLOCK))) != 0)):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FalconParser.RULE_namespace

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NsContext(NamespaceContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.NamespaceContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def name(self):
            return self.getTypedRuleContext(FalconParser.NameContext,0)

        def LBRAC(self):
            return self.getToken(FalconParser.LBRAC, 0)
        def RBRAC(self):
            return self.getToken(FalconParser.RBRAC, 0)
        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.StmtContext)
            else:
                return self.getTypedRuleContext(FalconParser.StmtContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNs" ):
                listener.enterNs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNs" ):
                listener.exitNs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNs" ):
                return visitor.visitNs(self)
            else:
                return visitor.visitChildren(self)



    def namespace(self):

        localctx = FalconParser.NamespaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_namespace)
        self._la = 0 # Token type
        try:
            localctx = FalconParser.NsContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.name()
            self.state = 67
            self.match(FalconParser.LBRAC)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FalconParser.T__1) | (1 << FalconParser.TEST) | (1 << FalconParser.ASSERT) | (1 << FalconParser.WINNOW) | (1 << FalconParser.GROUPBY) | (1 << FalconParser.SATISFY) | (1 << FalconParser.DIRECTIVE) | (1 << FalconParser.ID) | (1 << FalconParser.LABEL) | (1 << FalconParser.CODESMNT) | (1 << FalconParser.CODEBLOCK))) != 0):
                self.state = 68
                self.stmt()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(FalconParser.RBRAC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def test(self):
            return self.getTypedRuleContext(FalconParser.TestContext,0)


        def assertion(self):
            return self.getTypedRuleContext(FalconParser.AssertionContext,0)


        def groupby_test(self):
            return self.getTypedRuleContext(FalconParser.Groupby_testContext,0)


        def winnow_test(self):
            return self.getTypedRuleContext(FalconParser.Winnow_testContext,0)


        def satisfy_test(self):
            return self.getTypedRuleContext(FalconParser.Satisfy_testContext,0)


        def macro(self):
            return self.getTypedRuleContext(FalconParser.MacroContext,0)


        def domain(self):
            return self.getTypedRuleContext(FalconParser.DomainContext,0)


        def compiler(self):
            return self.getTypedRuleContext(FalconParser.CompilerContext,0)


        def cblock(self):
            return self.getTypedRuleContext(FalconParser.CblockContext,0)


        def code(self):
            return self.getTypedRuleContext(FalconParser.CodeContext,0)


        def assign(self):
            return self.getTypedRuleContext(FalconParser.AssignContext,0)


        def getRuleIndex(self):
            return FalconParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = FalconParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.test()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.assertion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.groupby_test()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                self.winnow_test()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 80
                self.satisfy_test()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 81
                self.macro()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 82
                self.domain()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 83
                self.compiler()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 84
                self.cblock()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 85
                self.code()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 86
                self.assign()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssertionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FalconParser.RULE_assertion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Assert_testContext(AssertionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.AssertionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ASSERT(self):
            return self.getToken(FalconParser.ASSERT, 0)
        def name(self):
            return self.getTypedRuleContext(FalconParser.NameContext,0)

        def COLON(self):
            return self.getToken(FalconParser.COLON, 0)
        def SEMICOLON(self):
            return self.getToken(FalconParser.SEMICOLON, 0)
        def test_stub(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.Test_stubContext)
            else:
                return self.getTypedRuleContext(FalconParser.Test_stubContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssert_test" ):
                listener.enterAssert_test(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssert_test" ):
                listener.exitAssert_test(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssert_test" ):
                return visitor.visitAssert_test(self)
            else:
                return visitor.visitChildren(self)



    def assertion(self):

        localctx = FalconParser.AssertionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assertion)
        self._la = 0 # Token type
        try:
            localctx = FalconParser.Assert_testContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(FalconParser.ASSERT)
            self.state = 90
            self.name()
            self.state = 91
            self.match(FalconParser.COLON)
            self.state = 93 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 92
                self.test_stub()
                self.state = 95 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FalconParser.BAR) | (1 << FalconParser.ABAR) | (1 << FalconParser.EBAR))) != 0)):
                    break

            self.state = 97
            self.match(FalconParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FalconParser.RULE_test

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Test_basicContext(TestContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.TestContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TEST(self):
            return self.getToken(FalconParser.TEST, 0)
        def name(self):
            return self.getTypedRuleContext(FalconParser.NameContext,0)

        def domain_names(self):
            return self.getTypedRuleContext(FalconParser.Domain_namesContext,0)

        def COLON(self):
            return self.getToken(FalconParser.COLON, 0)
        def SEMICOLON(self):
            return self.getToken(FalconParser.SEMICOLON, 0)
        def test_stub(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.Test_stubContext)
            else:
                return self.getTypedRuleContext(FalconParser.Test_stubContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTest_basic" ):
                listener.enterTest_basic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTest_basic" ):
                listener.exitTest_basic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTest_basic" ):
                return visitor.visitTest_basic(self)
            else:
                return visitor.visitChildren(self)



    def test(self):

        localctx = FalconParser.TestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_test)
        self._la = 0 # Token type
        try:
            localctx = FalconParser.Test_basicContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(FalconParser.TEST)
            self.state = 100
            self.name()
            self.state = 101
            self.domain_names()
            self.state = 102
            self.match(FalconParser.COLON)
            self.state = 104 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 103
                self.test_stub()
                self.state = 106 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FalconParser.BAR) | (1 << FalconParser.ABAR) | (1 << FalconParser.EBAR))) != 0)):
                    break

            self.state = 108
            self.match(FalconParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MacroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FalconParser.RULE_macro

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Macro_basicContext(MacroContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.MacroContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.NameContext)
            else:
                return self.getTypedRuleContext(FalconParser.NameContext,i)

        def domain_names(self):
            return self.getTypedRuleContext(FalconParser.Domain_namesContext,0)

        def COLON(self):
            return self.getToken(FalconParser.COLON, 0)
        def SEMICOLON(self):
            return self.getToken(FalconParser.SEMICOLON, 0)
        def test_stub(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.Test_stubContext)
            else:
                return self.getTypedRuleContext(FalconParser.Test_stubContext,i)

        def winnow_stub(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.Winnow_stubContext)
            else:
                return self.getTypedRuleContext(FalconParser.Winnow_stubContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMacro_basic" ):
                listener.enterMacro_basic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMacro_basic" ):
                listener.exitMacro_basic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMacro_basic" ):
                return visitor.visitMacro_basic(self)
            else:
                return visitor.visitChildren(self)



    def macro(self):

        localctx = FalconParser.MacroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_macro)
        self._la = 0 # Token type
        try:
            localctx = FalconParser.Macro_basicContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.name()
            self.state = 111
            self.name()
            self.state = 112
            self.domain_names()
            self.state = 113
            self.match(FalconParser.COLON)
            self.state = 116 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 116
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 114
                    self.test_stub()
                    pass

                elif la_ == 2:
                    self.state = 115
                    self.winnow_stub()
                    pass


                self.state = 118 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FalconParser.BAR) | (1 << FalconParser.ABAR) | (1 << FalconParser.EBAR))) != 0)):
                    break

            self.state = 120
            self.match(FalconParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Domain_namesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FalconParser.RULE_domain_names

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Get_domain_namesContext(Domain_namesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.Domain_namesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.NameContext)
            else:
                return self.getTypedRuleContext(FalconParser.NameContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FalconParser.COMMA)
            else:
                return self.getToken(FalconParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGet_domain_names" ):
                listener.enterGet_domain_names(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGet_domain_names" ):
                listener.exitGet_domain_names(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGet_domain_names" ):
                return visitor.visitGet_domain_names(self)
            else:
                return visitor.visitChildren(self)


    class Get_domain_nameContext(Domain_namesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.Domain_namesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def name(self):
            return self.getTypedRuleContext(FalconParser.NameContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGet_domain_name" ):
                listener.enterGet_domain_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGet_domain_name" ):
                listener.exitGet_domain_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGet_domain_name" ):
                return visitor.visitGet_domain_name(self)
            else:
                return visitor.visitChildren(self)



    def domain_names(self):

        localctx = FalconParser.Domain_namesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_domain_names)
        self._la = 0 # Token type
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = FalconParser.Get_domain_nameContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.name()
                pass

            elif la_ == 2:
                localctx = FalconParser.Get_domain_namesContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.name()
                self.state = 128 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==FalconParser.COMMA:
                        self.state = 124
                        self.match(FalconParser.COMMA)


                    self.state = 127
                    self.name()
                    self.state = 130 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FalconParser.COMMA) | (1 << FalconParser.ID) | (1 << FalconParser.LABEL) | (1 << FalconParser.CODESMNT))) != 0)):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Test_stubContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FalconParser.RULE_test_stub

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Stub_many_pvContext(Test_stubContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.Test_stubContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BAR(self):
            return self.getToken(FalconParser.BAR, 0)
        def predicate(self):
            return self.getTypedRuleContext(FalconParser.PredicateContext,0)
